<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sakit">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#671BC7"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:background="#F901EF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sakit"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.153" />

    <Button
        android:id="@+id/button7"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:background="@drawable/corner5"
        android:text="@string/agus"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="12sp"
        app:backgroundTint="#C4C4C4"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:id="@+id/button10"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:background="@drawable/corner5"
        android:text="@string/fatur"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="12sp"
        app:backgroundTint="#C4C4C4"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.585" />

    <Button
        android:id="@+id/button9"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/corner5"
        android:text="@string/bila"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="12sp"
        app:backgroundTint="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/button8"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/corner5"
        android:text="@string/obrain"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="12sp"
        app:backgroundTint="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="43dp"
        android:layout_height="15dp"
        android:text="@string/note"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="66dp"
        android:text="@string/barang_siapa_tidak_hadir_selama_1_bulan_maka_dianggap_tidak_lulus_dan_mengulang_kembali_disemester_depan"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.861" />

    <Button
        android:id="@+id/ButtonBalik"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:background="@drawable/panah1"
        android:rotation="50"
        app:backgroundTint="#00ffe4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_select"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ButtonBalik"
        app:layout_constraintTop_toTopOf="@+id/ButtonBalik" />

</androidx.constraintlayout.widget.ConstraintLayout>